syntax = "proto3";
package grpc.simple;

service UserService {
    rpc GetUserInfo (UserRequest) returns (UserResponse);
}

message UserRequest {
    int32 ID = 1;
}

message UserResponse {
    string name = 1;
    int32 age = 2;
}

// 生成 user.pb.go
// protoc -I . --go_out=plugins=grpc:. user.proto